<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/apexmealdonateFragment"
            android:icon="@drawable/ic_menu_donate"
            android:title="@string/action_donate" />
        <item
            android:id="@+id/reportFragment"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/action_report" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/ic_menu_maps"
            android:title="@string/action_maps" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/action_about" />
    </group>
    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>