<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/reportFragment">

    <fragment
        android:id="@+id/apexmealdonateFragment"
        android:name="ie.wit.apexmeals.ui.donate.ApexMealDonateFragment"
        android:label="@string/action_donate"
        tools:layout="@layout/fragment_apex_meal_donate" >
        <action
            android:id="@+id/action_apexmealdonateFragment_to_reportFragment"
            app:destination="@id/reportFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/reportFragment"
        android:name="ie.wit.apexmeals.ui.report.ReportFragment"
        android:label="@string/action_report"
        tools:layout="@layout/fragment_report" >
        <action
            android:id="@+id/action_reportFragment_to_apexmealdonateFragment"
            app:destination="@id/apexmealdonateFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_reportFragment_to_apexmealdonationDetailFragment"
            app:destination="@id/apexmealdonationDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ie.wit.apexmeals.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/apexmealdonationDetailFragment"
        android:name="ie.wit.apexmeals.ui.detail.ApexMealDonationDetailFragment"
        android:label="apex_meal_donation_detail_fragment"
        tools:layout="@layout/fragment_apex_meal_donation_detail" >
        <action
            android:id="@+id/action_apexmealdonationDetailFragment_to_reportFragment"
            app:destination="@id/reportFragment" />
        <argument
            android:name="apexmealid"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="ie.wit.apexmeals.ui.map.MapsFragment"
        android:label="ApexMeals Map"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_apexmealdonationDetailFragment"
            app:destination="@id/apexmealdonationDetailFragment" />
    </fragment>
</navigation>